--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,15 @@ body{
     letter-spacing: 0.03em;
     color: var(--black-txt-color);
 }
+
+h1, h2, h3, h4, p{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 .list{
+    padding-left: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
     list-style: none;
 }
 
@@ -30,9 +38,24 @@ body{
     text-decoration: none;
 }
 
+.container{
+    width: 1200px;
+    /*padding-left: 20px;
+    padding-right: 20px;*/
+    margin-left: auto;
+    margin-right: auto;
+}
 .header{
+    padding-top: 24px;
+    padding-bottom: 24px;
     background: var(--white-bgr-color);
 }
+
+.header-container{
+    display: flex;
+    align-items: center;
+}
+
 .header-link,
 .footer-link{
     font-family: 'Raleway';
@@ -40,13 +63,31 @@ body{
     font-size: 26px;
     line-height: 1.19;
     color: var(--blue-txt-color);
+
+    margin-right: 93px;
 }
 .header-link-logo{
     color: var(--tblack-txt-color);
 }
+
+
+.nav-list{
+    display: flex;
+    align-items: center;
+
+}
+
+.nav-item{
+    margin-right: 50px;
+}
+.nav-item:last-child{
+    margin: 0px;
+}
 .nav-link{
+    font-family: 'Roboto';
     font-weight: 500;
-    line-height: 1.14;
+    font-size: 14px;
+    line-height: 16px;
     letter-spacing: 0.02em;
     color: var(--black-txt-color);
 }
@@ -57,9 +98,19 @@ body{
 .nav-link:focus{
     color: var(--blue-txt-color);
 }
+
+.header-list{
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
 .header-contact{
+    margin-left: 50px;
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 500;
-    line-height: 1.14;
+    font-size: 14px;
+    line-height: 16px;
     letter-spacing: 0.02em;
     color: var(--gray-txt-color);
 }
@@ -82,6 +133,10 @@ body{
     color: var(--white-txt-color)
 }
 .hero-button{
+    padding: 8px 30px;
+    max-width: 350px;
+    min-width: 216px;
+    font-family: 'Roboto';
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
