--- a/css/styles.css
+++ b/css/styles.css
@@ -1,349 +1,392 @@
-:root{
-    /*Основной шрифт*/
-    --main-font: 'Roboto' sans-serif;
-    /*Цвет текста*/ 
-    --black-txt-color:#212121;
-    --tblack-txt-color:#000000;
-    --white-txt-color: #FFFFFF;
-    --gray-txt-color: #757575;
-    --blue-txt-color: #2196F3;
-    /*Цвет фона*/
-    --dark-bgr-color: #2F303A;
-    --white-bgr-color: #FFFFFF;
-    --primary-white-bgr-color:#F5F4FA;
-    --secondary-white-bgr-colot: #F5F5F5;
-
+:root {
+  /*Основной шрифт*/
+  --main-font: "Roboto" sans-serif;
+  /*Цвет текста*/
+  --black-txt-color: #212121;
+  --tblack-txt-color: #000000;
+  --white-txt-color: #ffffff;
+  --gray-txt-color: #757575;
+  --blue-txt-color: #2196f3;
+  /*Цвет фона*/
+  --dark-bgr-color: #2f303a;
+  --white-bgr-color: #ffffff;
+  --primary-white-bgr-color: #f5f4fa;
+  --secondary-white-bgr-colot: #f5f5f5;
 }
 
-body{
-    font-family: 'Roboto' sans-serif;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--black-txt-color);
+body {
+  font-family: "Roboto" sans-serif;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--black-txt-color);
 }
 
-h1, h2, h3, h4, p{
-    margin-top: 0px;
-    margin-bottom: 0px;
+h1,
+h2,
+h3,
+h4,
+p {
+  /* margin-top: 0px;
+    margin-bottom: 0px; */
+  margin: 0;
+  padding: 0;
 }
-.list{
-    padding-left: 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    list-style: none;
-}
-
-.link{
-    text-decoration: none;
-}
-
-.container{
-    width: 1200px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.header{
-    padding-top: 24px;
-    padding-bottom: 24px;
-    border-bottom: 1px solid #ECECEC;
-    background: var(--white-bgr-color);
+.list {
+  padding-left: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  list-style: none;
 }
 
-.header-container{
-    display: flex;
-    align-items: center;
+.link {
+  padding-left: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  text-decoration: none;
 }
 
-
-
-.header-link,
-.footer-link{
-    font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    color: var(--blue-txt-color);
-
-    margin-right: 93px;
+.container {
+  width: 1170px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
-.header-link-logo{
-    color: var(--tblack-txt-color);
+.header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #ececec;
+  background: var(--white-bgr-color);
 }
 
-
-.nav-list{
-    display: flex;
-    align-items: center;
-
+.header-container {
+  display: flex;
+  align-items: center;
 }
 
-.nav-item{
-    margin-right: 50px;
+.header-link {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  color: var(--blue-txt-color);
+
+  margin-right: 93px;
 }
-.nav-item:last-child{
-    margin: 0px;
+.header-link-logo {
+  color: var(--tblack-txt-color);
 }
-.nav-link{
-    font-family: 'Roboto';
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    color: var(--black-txt-color);
+
+.nav-list {
+  display: flex;
+  align-items: center;
 }
-.nav-link.current{
-    color: var(--blue-txt-color)
+
+.nav-item {
+  margin-right: 50px;
+}
+.nav-item:last-child {
+  margin: 0px;
+}
+.nav-link {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: var(--black-txt-color);
+}
+.nav-link.current {
+  color: var(--blue-txt-color);
 }
 .nav-link:hover,
-.nav-link:focus{
-    color: var(--blue-txt-color);
+.nav-link:focus {
+  color: var(--blue-txt-color);
 }
 
-.header-list{
-    display: flex;
-    align-items: center;
-    margin-left: auto;
+.header-list {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
 }
 
-.header-item+.header-item{
-    margin-left: 50px;
+.header-item {
+  margin-right: 50px;
 }
-.header-contact{
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    color: var(--gray-txt-color);
+
+.header-item:last-child {
+  margin-right: 0px;
+}
+.header-contact {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: var(--gray-txt-color);
 }
 .header-contact:hover,
-.header-contact:hover{
-    color: var(--blue-txt-color);
+.header-contact:hover {
+  color: var(--blue-txt-color);
 }
 
-.hero{
-    background-color: var(--dark-bgr-color);
+.hero {
+  text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background-color: var(--dark-bgr-color);
 }
-.hero-title{
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+.hero-title {
+  margin-bottom: 30px;
 
-    color: var(--white-txt-color)
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+
+  color: var(--white-txt-color);
 }
-.hero-button{
-    padding: 8px 30px;
-    max-width: 350px;
-    min-width: 216px;
-    font-family: 'Roboto';
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: var(--white-txt-color);
-    background: var(--blue-txt-color);
-    cursor: pointer;
-
+.hero-button {
+  padding: 8px 30px;
+  max-width: 350px;
+  min-width: 216px;
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--white-txt-color);
+  background: var(--blue-txt-color);
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
 }
 
 .hero-button:hover,
-.hero-button:focus{
-    background: #188CE8;
+.hero-button:focus {
+  background: #188ce8;
 }
-.about{
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.about-list{
-    display: flex;
-    flex-wrap: wrap;
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
-.about-item{
-    width: 270px;
-    margin-right: 30px;
+.about-list {
+  display: flex;
+  flex-wrap: nowrap;
 }
 
-.about-item:last-child{
-    margin-right: 0px;
-}
-.about-title{
-    font-weight: 700;
-    line-height: 1.14;
-    text-transform: uppercase;
-}
-.about-text{
-    font-weight: 400;
-    color: var(--gray-txt-color);
+.about-item {
+  width: 270px;
+  margin-right: 30px;
 }
 
-.services-list{
-    display: flex;
-    flex-wrap: wrap;
+.about-item:last-child {
+  margin-right: 0px;
 }
-.services-item{
-    margin-right: 30px;
-    margin-top: 50px;
-    width: 370px;
+.about-title {
+  margin-bottom: 10px;
+  font-weight: 700;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
-.services-item:last-child{
-    margin-right: 0px;
+.about-text {
+  font-weight: 400;
+  color: var(--gray-txt-color);
 }
-
-.services-title{
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-}
-.team{
-    background: var(--primary-white-bgr-color);
+.services {
+  padding-top: 0;
 }
 
-.team-list{
-    display: flex;
-    flex-wrap: wrap; 
+.services-list {
+  display: flex;
+  flex-wrap: wrap;
+  /* padding-bottom: 100px; */
+}
+.services-item {
+  margin-right: 30px;
+}
+.services-item:last-child {
+  margin-right: 0px;
 }
 
-.team-item{
-    margin-right: 30px;
+.services-title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+}
+.team {
+  background: var(--primary-white-bgr-color);
 }
 
-.team-item:last-child{
-    margin-right: 0px;
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.team-image{
-    margin-bottom: 30px;
+.team-item {
+  margin-right: 30px;
 }
-.team-title{
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-}
-.team-name{
-    padding-top: 30px;
-    padding-bottom: 10px;
 
+.team-item:last-child {
+  margin-right: 0px;
+}
 
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
+.team-image {
+  margin-bottom: 30px;
 }
-.team-text{
-font-weight: 400;
-font-size: 16px;
-line-height: 1.19;
-text-align: center;
-color:var(--gray-txt-color);
+.team-title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
 }
-.footer{
-    background-color: var(--dark-bgr-color);
+.team-name {
+  margin-bottom: 10px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
-.footer-logo{
-    font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    color: var(--white-txt-color)
-}
-.footer-adress{
-    font-weight: 400;
-    text-decoration: none;
-    font-style: normal;
-    color: var(--white-txt-color)
-}
-.footer-adress:hover,
-.footer-adress:focus{
-    color: var(--blue-txt-color);
-}
-.footer-contact{
-    font-weight: 400;
-    color: rgba(255, 255, 255, 0.6);
-    text-decoration: none;
-    font-style: normal;
-}
-.footer-contact:hover,
-.footer-contact:focus{
-    color: var(--blue-txt-color);
+.team-text {
+  margin-bottom: 25px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  color: var(--gray-txt-color);
 }
 
 /*Портфолио*/
 
-.filter-list{
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
+.filter-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-bottom: 34px;
 }
-.filter-button.current{
-    cursor: pointer;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    text-align: center;
-    color: var(--black-txt-color);
-    background-color:var(--blue-txt-color);
-
+.filter-item {
+  margin-right: 8px;
+}
+.filter-item:last-child {
+  margin-right: 0;
 }
 
-.filter-button.current:hover,
-.filter-button.current:focus{
-    background:var(--blue-txt-color);
-    color: var(--white-txt-color);
-}
-.filter-button{
-    cursor: pointer;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    text-align: center;
-    color: var(--black-txt-color);
+.filter-button {
+padding: 6px 22px;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  color: var(--black-txt-color);
+  border-radius: 4px;
+  border: none;
+
 }
 .filter-button:hover,
-.filter-button:focus{
-    background:var(--blue-txt-color);
-    color: var(--white-txt-color);
+.filter-button:focus {
+  background: var(--blue-txt-color);
+  color: var(--white-txt-color);
 }
-.potfolio-list{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-
-.portfolio-item{
-    margin-right: 30px;
-    margin-bottom: 30px;
+.potfolio-list {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.portfolio-item:nth-child(3n){
-    margin-right: 0px;
-}
-.portfolio-item:nth-last-child(-n+3){
-    margin-bottom: 0px;
-}
-.portfolio-title{
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+.portfolio-item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #EEEEEE;;
 }
 
-.portfolio-text{
-font-weight: 400;
-font-size: 16px;
-line-height: 1.88;
-color: var(--gray-txt-color);
+.portfolio-item:nth-child(3n) {
+  margin-right: 0px;
+}
+.portfolio-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+.portfolio-title {
+  margin-top: 20px;
+  margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.portfolio-text {
+  margin-bottom: 20px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  color: var(--gray-txt-color);
+}
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--dark-bgr-color);
+}
+.logo-footer {
+  margin-bottom: 20px;
+}
+.footer-link {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  color: var(--blue-txt-color);
+}
+.footer-logo {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  color: var(--white-txt-color);
+}
+.footer-item {
+  margin-bottom: 9px;
+}
+.footer-item:last-child {
+  margin-bottom: 0px;
+}
+.footer-adress {
+  font-family: "Roboto";
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  font-weight: 400;
+  text-decoration: none;
+  font-style: normal;
+  color: var(--white-txt-color);
+}
+.footer-adress:hover,
+.footer-adress:focus {
+  color: var(--blue-txt-color);
+}
+.footer-contact {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71px;
+  letter-spacing: 0.03em;
+
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+}
+.footer-contact:hover,
+.footer-contact:focus {
+  color: var(--blue-txt-color);
 }
